--- a/Mini Project/requirements.txt
+++ b/Mini Project/requirements.txt
@@ -1,6 +1,5 @@
 streamlit
 speechrecognition
+pyttsx3
 wikipedia
-requests
-langdetect
-googletrans==4.0.0rc1
+requests # Added for making HTTP requests to the LLM API
